(feat) pokemon controllers and models
